--- a/src/components/styles/home.css
+++ b/src/components/styles/home.css
@@ -1,16 +1,26 @@
-#home .jumbotron{
+.jumbotron{
   width:100%;
   height:45vh;
   position: relative;
-  background-image: url(https://static.wixstatic.com/media/f6bd60_abd9282eba80484da95455e5d3473b3d.jpg/v1/fill/w_548,h_446,al_c,lg_1,q_80/f6bd60_abd9282eba80484da95455e5d3473b3d.webp);
+  background-image: url(../../img/hair-2537564_1920.jpg);
   background-repeat: no-repeat;
-  background-size:cover;
+  background-size:100% 130%;
+  background-position: center;
 } 
+body{
+  background-color: cyan;
+}
+#home{
+  color:white;
+}
+#home section{
+  padding-bottom:10%;
+}
 
 .overlay{
  position: absolute;
-  background-color: rgba(255,255,255,0.5);
-  color:white;
+  color:rgba(255,255,255,0.5);
   bottom: 1px;
   font-size: 5em;
 }
+@import './philosophy.css';
