--- a/src/components/styles/index.css
+++ b/src/components/styles/index.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #12B7B3;
+  background-color: #12B7B3 !important;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
