--- a/src/components/styles/home/philosophy.css
+++ b/src/components/styles/home/philosophy.css
@@ -1,5 +1,6 @@
-#Philosophy p#our_Philosophy {
+#Philosophy #our_Philosophy {
   background-color: gray;
   color:cyan;
   margin:0px;
+  padding-top:15px;
 }
