--- a/src/components/styles/import.styles.css
+++ b/src/components/styles/import.styles.css
@@ -1,3 +1,5 @@
-@import './header.css';
+@import './header/header.css';
 @import './index.css';
-@import './home.css';
+@import './home/home.css';
+@import './footer/footer.css';
+@import './contact/contact.css'; 
